--- a/css/style.css
+++ b/css/style.css
@@ -62,14 +62,14 @@ body{
 }
 
 .inicio{
-    padding: 220px;
     display: flex;
     background-image: url("../img/man.jpg");
-    height: 100%;
+    height: 100vh;
     background-size:cover;
     background-position: 0 50%;
     filter: opacity(75%);
     justify-content: center;
+    align-items: center;
 }
 
 .inicio h1{
