--- a/css/style.css
+++ b/css/style.css
@@ -1,497 +1,435 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: 'Montserrat', sans-serif; 
-}
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif; }
 
-body{
-    background: radial-gradient(circle, #c3c3c3, #fff);
-}
+body {
+  background: radial-gradient(circle, #c3c3c3, #fff); }
 
-.header{
-    z-index: 1;
-    top: 0;
-    width: 100%;
-    filter: opacity(85%);
-    position: fixed;
-    background-color: #fff;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: #aaa solid 1px;
-}
+.row {
+  justify-content: space-between; }
 
-.header img{
-    height: 80px;
+.header {
+  z-index: 1;
+  top: 0;
+  width: 100%;
+  filter: opacity(85%);
+  position: fixed;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: #aaa solid 1px; }
+  .header img {
+    height: 17vh;
     align-self: center;
     position: relative;
-    left: 25px;
-}
-.header ul{
+    left: 4vw; }
+  .header ul {
     list-style: none;
     display: flex;
-}
-
-.header li{
-    padding: 30px 25px;
-    font-size: 20px;
-}
-.header a{
+    margin-bottom: 0; }
+  .header li {
+    padding: 5vh 3vw;
+    font-size: 1.3rem; }
+  .header a {
     text-decoration: none;
     color: #000;
-    transition: .3s;
-}
+    transition: .3s; }
+    .header a:hover {
+      color: #999;
+      transform: scale(1.1); }
 
-.header li a:hover{
-    color: #999;
-    transform: scale(1.1);
-}
+.sideBar {
+  display: none; }
 
-.wpp{
-    position: fixed;
-    right: 10px;
-    bottom: 10px;
-    z-index: 1;
-}
-.wpp img{
+.navbar {
+  width: 100%; }
+
+.wpp {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  z-index: 1; }
+  .wpp img {
     width: 50px;
-    transition: .3s;
-}
+    transition: .3s; }
+    .wpp img:hover {
+      transform: scale(1.1); }
 
-.wpp img:hover{
-    transform: scale(1.1);
-}
-
-.inicio{
-    display: flex;
-    background-image: url("../img/man.jpg");
-    height: 100vh;
-    background-size:cover;
-    background-position: 0 50%;
-    filter: opacity(75%);
-    justify-content: center;
-    align-items: center;
-}
-
-.inicio h1{
+.inicio {
+  display: flex;
+  background-image: url("../img/man.jpg");
+  height: 100vh;
+  background-size: cover;
+  background-position: 0 50%;
+  filter: opacity(75%);
+  justify-content: center;
+  align-items: center; }
+  .inicio h1 {
     position: relative;
     text-align: center;
     font-size: 5vw;
-    text-shadow: 1px 1px 2px #000000 ;
+    text-shadow: 1px 1px 2px #000000;
     color: #ff3f3f;
-}
+    font-weight: bold; }
+  .inicio span {
+    width: 400px; }
 
-.inicio span{
-    width: 400px;
-}
+.description {
+  padding: 30px 50px;
+  background-color: #9b9b9b;
+  text-align: center; }
 
-.description{
-    padding: 30px 50px;
-    background-color: #9b9b9b;
-    text-align: center;
-}
-
-.servicios-container{
-    margin: 40px 20px;
-}
+.servicios-container {
+  margin: 40px 20px; }
 
 .servicios-titulo {
-    text-align: center;
-    margin: 60px 0 30px 0;
-    color: rgb(255, 63, 63);
-    filter: opacity(75%);
-    text-shadow: 1px 1px 2px #000000 ;
-}
-
-.servicios-titulo h2{
+  text-align: center;
+  margin: 60px 0 30px 0;
+  color: #ff3f3f;
+  filter: opacity(75%);
+  text-shadow: 1px 1px 2px #000000; }
+  .servicios-titulo h2 {
     font-size: 7vh;
-}
+    font-weight: bold; }
 
-.line{
-    width: 70px;
-    height: 10px;
-    background-color: #f76767;
-    filter: opacity(75%);
-    margin: 0 auto;
-    box-shadow: 1px 1px 2px rgb(0 0 0 / 0%)
-}
+.line {
+  width: 70px;
+  height: 10px;
+  background-color: #f76767;
+  filter: opacity(75%);
+  margin: 0 auto;
+  box-shadow: 1px 1px 2px black; }
 
-.servicios-imagenes{
-    display: flex;
-    margin: 35px 0;
-}
-
-.servicios-imagenes div{
-    width: 350px;
-    height: 450px;
-    margin: 10px;
-    padding: 5px;
-    border-radius: 10px;
-    background-color: #f76767;
-    box-shadow: 1px 1px 2px rgb(0 0 0 / 10%), rgb(0 0 0 / 10%) 0px 34px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
-}
-
-.servicios-imagenes div img{
+.servicios-imagenes {
+  display: flex;
+  margin: 35px 0; }
+  .servicios-imagenes img {
     object-fit: cover;
     border-radius: 10px;
-    height: 70%;
-    width: 100%;
-}
-
-.servicios-imagenes article{
+    height: 48vh; }
+  .servicios-imagenes article {
     text-align: center;
     margin: 20px 10px;
-    font-size: 15px;
-}
+    font-size: 15px; }
 
-.footer{
-    background-color: #9b9b9b;
-}
+.servicios-div {
+  width: 350px;
+  height: 450px;
+  margin: 10px;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: #f76767;
+  box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px; }
 
-.footer-container{
-    display: flex;
-    width: 75%;
-    padding: 40px 20px;
-    margin: auto;
-    height: 50px;
-    align-items: center;
-    justify-content: space-between;
-}
-.redes{
-    display: flex;
-}
+.footer {
+  background-color: #9b9b9b; }
 
-.redes li{
+.footer-container {
+  display: flex;
+  width: 75%;
+  padding: 40px 20px;
+  margin: auto;
+  height: 50px;
+  align-items: center;
+  justify-content: space-between; }
+
+.redes {
+  display: flex; }
+  .redes li {
     list-style: none;
-    margin: 0 30px ;
-}
-
-.redes i{
+    margin: 0 30px; }
+  .redes i {
     color: #000;
-    transition: .3s;
-}
+    transition: .3s; }
+    .redes i:hover {
+      color: #ddd;
+      transform: scale(1.2); }
 
-.redes i:hover{
-    color: #ddd;
-    transform: scale(1.2);
-}
+.footer-logo img {
+  width: 10vw; }
 
 /* NOSOTROS PAGE */
-
-.inicio-container{
-    height: 140vh;
-    position: relative;
-    top: 120px;
-}
-
-.inicio-container h1{
+.inicio-container {
+  margin-top: 20vh; }
+  .inicio-container h1 {
     text-align: center;
     font-size: 7vh;
-    color: rgb(255, 63, 63);
+    color: #ff3f3f;
     filter: opacity(75%);
-    text-shadow: 1px 1px 2px #000000 ;
-}
-
-.inicio-container p{
+    text-shadow: 1px 1px 2px #000000; }
+  .inicio-container p {
     text-align: center;
-    margin: 30px 50px;
-}
+    margin: 30px 50px; }
 
-.inicio-card{ 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 80%;
-    margin: auto;
-    background-color: #f76767;
-    padding: 10px;
-    border-radius: 15px;
-}
+.inicio-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+  background-color: #f76767;
+  padding: 10px;
+  border-radius: 15px; }
 
 .inicio-img.uno {
-    width: 200px;
-    height: 250px;
-}
+  width: 200px;
+  height: 250px; }
 
-.inicio-img.dos{
-    width: 300px;
-}
+.inicio-img.dos {
+  width: 300px; }
 
-.inicio-img img{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-    margin: 5px;
-}
+.inicio-img img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  margin: 5px; }
 
-.inicio-card article{
-    margin: 30px 20px;
-    width: 60%;
-}
+.inicio-card article {
+  margin: 30px 20px;
+  width: 60%; }
 
-.inicio-card h3{
-    text-align: center;
-}
+.inicio-card h3 {
+  text-align: center; }
 
-.findus-container{
-    margin: 50px 20px;
-}
-
-.findus-container h2 {
+.findus-container {
+  margin: 50px 20px; }
+  .findus-container h2 {
     font-size: 6vh;
     text-align: center;
     margin: 60px 0 30px 0;
-    color: rgb(255, 63, 63);
+    color: #ff3f3f;
     filter: opacity(75%);
-    text-shadow: 1px 1px 2px #000000 ;
-}
+    text-shadow: 1px 1px 2px #000000; }
 
-.findus{
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-}
-
-.findus div{
+.findus {
+  display: flex;
+  width: 100%;
+  justify-content: space-around; }
+  .findus div {
     background-color: #f76767;
     border-radius: 15px;
-    box-shadow: 1px 1px 2px rgb(0 0 0 / 10%), rgb(0 0 0 / 10%) 0px 34px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
-}
-
-.findus iframe{
+    box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px; }
+  .findus iframe {
     margin: 10px;
     max-width: 400px;
-    border-radius: 15px;
-}
+    border-radius: 15px; }
 
-.story-container h3{
-    font-size: 6vh;
-    text-align: center;
-    margin: 60px 0 30px 0;
-    color: rgb(255, 63, 63);
-    filter: opacity(75%);
-    text-shadow: 1px 1px 2px #000000 ;
-}
+.story-container h3 {
+  font-size: 6vh;
+  text-align: center;
+  margin: 60px 0 30px 0;
+  color: #ff3f3f;
+  filter: opacity(75%);
+  text-shadow: 1px 1px 2px #000000; }
 
-.story-video{
-    margin: 0 auto;
-    width: 560px;
-    height: 315px;
-    padding: 10px;
-    background-color: #f76767;
-    border-radius: 15px;
-    box-shadow: 1px 1px 2px rgb(0 0 0 / 10%), rgb(0 0 0 / 10%) 0px 34px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
-}
+.story-container iframe {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px; }
 
-.story-container iframe{
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-}
+.story-container p {
+  margin: 50px 150px;
+  text-align: justify; }
 
-.story-container p{
-    margin: 50px 150px;
-    text-align: justify;
-}
+.story-video {
+  margin: 0 auto;
+  width: 560px;
+  height: 315px;
+  padding: 10px;
+  background-color: #f76767;
+  border-radius: 15px;
+  box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px; }
 
-.story-img{
-    margin: 0 250px;
-    padding: 10px;
-    background-color: #f76767;
-    border-radius: 15px;
-    box-shadow: 1px 1px 2px rgb(0 0 0 / 10%), rgb(0 0 0 / 10%) 0px 34px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.story-img img{
-    margin: 10px 0;
-}
-
-.story-container .subtitulo{
+.story-img {
+  margin: 0 250px;
+  padding: 10px;
+  background-color: #f76767;
+  border-radius: 15px;
+  box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  .story-img img {
+    margin: 10px 0; }
+  .story-img .subtitulo {
     margin: 0px 10px;
     text-align: justify;
-    font-size: 2vh;
-}
+    font-size: 2vh; }
 
 /* SERVICIOS */
+.servicio-container {
+  margin-top: 25vh; }
 
-.servicio-container{
-    height: 400vh;
-    position: relative;
-    top: 70px;
-}
+.servicios-titulo h3 {
+  font-size: 6vh; }
 
-.servicios-titulo h3{
-    font-size: 6vh;
-}
+.servicios-imagenes {
+  display: flex;
+  margin: 35px 0;
+  flex-wrap: wrap;
+  justify-content: space-around; }
 
-.servicios-imagenes{
-    display: flex;
-    margin: 35px 0;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.servicios-cards div{
-    width: 350px;
-    height: 450px;
-    margin: 10px;
-    padding: 5px;
-    border-radius: 10px;
-    background-color: #cf7d7d;
-    box-shadow: 1px 1px 2px rgb(0 0 0 / 10%), rgb(0 0 0 / 10%) 0px 34px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
-
-}
+.servicios-cards div {
+  width: 350px;
+  height: 450px;
+  margin: 10px;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: #cf7d7d;
+  box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px; }
 
 /* HORARIOS */
-
-.horario-container{
-    height: 200vh;
-    position: relative;
-    top: 120px;
-}
-
-.horario-container h1{
+.horario-container {
+  margin-top: 25vh; }
+  .horario-container h1 {
     text-align: center;
     font-size: 7vh;
     margin-bottom: 30px;
-    color: rgb(255, 63, 63);
+    color: #ff3f3f;
     filter: opacity(75%);
-    text-shadow: 1px 1px 2px #000000 ;
-}
-
-.horario-container ul{
-    /* text-align: center; */
+    text-shadow: 1px 1px 2px #000000; }
+  .horario-container ul {
     margin: 10px 30px;
-    list-style: none;
-}
+    list-style: none; }
 
-.horario-cards{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    /* align-items: center; */
-}
-.horario-card{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 45%;
-    margin: 20px 10px;
-    background-color: #f76767;
-    padding: 10px;
-    border-radius: 15px;
-    box-shadow: 1px 1px 2px rgb(0 0 0 / 10%), rgb(0 0 0 / 10%) 0px 34px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;  
-}
+.horario-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+
+.horario-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 45%;
+  margin: 20px 10px;
+  background-color: #f76767;
+  padding: 10px;
+  border-radius: 15px;
+  box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px; }
+  .horario-card ul {
+    margin-left: 0; }
+  .horario-card article {
+    text-align: center;
+    margin: 10px 10px;
+    width: 60%; }
 
 .horario-img {
-    width: 200px;
-    height: 230px;
-}
-
-.horario-img img{
+  width: 200px;
+  height: 230px; }
+  .horario-img img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 15px;
-}
-
-.horario-card article{
-    text-align: center;
-    margin: 10px 10px;
-    width: 60%;
-}
+    border-radius: 15px; }
 
 /* CONTACTO */
-
-.contacto-container{
-    height: 180vh;
-    position: relative;
-    top: 120px;
-}
-
-.contacto-container h1{
+.contacto-container {
+  margin-top: 25vh; }
+  .contacto-container h1 {
     text-align: center;
     font-size: 7vh;
     margin-bottom: 30px;
-    color: rgb(255, 63, 63);
+    color: #ff3f3f;
     filter: opacity(75%);
-    text-shadow: 1px 1px 2px #000000 ;
-}
+    text-shadow: 1px 1px 2px #000000; }
 
-.contacto-div{
-    text-align: center;
+.contacto-div {
+  text-align: center; }
 
-}
-
-.flex-container label{
-    font-weight: 600;
-}
-
-.contacto-div input{
-    border: none;
-}
+.contacto-div input {
+  border: none; }
 
 .flex-container {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	justify-content: center;
-	background-color: #bbb;
-	margin: 50px 300px;
-	border: 14px solid #f76767;
-    border-radius: 15px;
-}
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #bbb;
+  margin: 10vh 25vw;
+  border: 1vh solid #f76767;
+  border-radius: 15px; }
+  .flex-container label {
+    font-weight: 600; }
 
 .form {
-	min-width: 400px;
-	flex: 1;
-	padding: 30px;
-	order: 10;
-}
+  min-width: 35vw;
+  flex: 1;
+  padding: 30px;
+  order: 10; }
 
 .form-input {
-	width: 100%;
-	padding: 7px;
-	margin: 6px 0;
-	border: none;
-	border-bottom: 4px solid #f76767;
-	background-color: transparent;
-	color: #fff;
-	max-width: 500px;
-	
-}	
-
-.form-input:focus {
-	background: linear-gradient(to bottom, transparent, #bbb);
-	border-bottom: 4px solid #f76767;
-	outline: none;
-}
+  width: 100%;
+  padding: 7px;
+  margin: 6px 0;
+  border: none;
+  border-bottom: 4px solid #f76767;
+  background-color: transparent;
+  color: #fff;
+  max-width: 500px; }
+  .form-input:focus {
+    background: linear-gradient(to bottom, transparent, #bbb);
+    border-bottom: 4px solid #f76767;
+    outline: none; }
 
 .form textarea {
-	min-height: 140px;
-	resize: none;
-}
+  min-height: 140px;
+  resize: none; }
 
 .submit {
-	background-color: #f76767;
-	border: none;
-	padding: 12px;
-}
+  background-color: #f76767;
+  border: none;
+  padding: 12px; }
+  .submit:hover {
+    background-color: #f76767;
+    border: none;
+    padding: 12px; }
+  .submit:active {
+    background: linear-gradient(to bottom, #f76767, #ff3f3f); }
+  .submit:focus {
+    background: linear-gradient(to bottom, #f76767, #ff3f3f); }
 
-.submit:hover{
-	background-color: #f76767;
-	border: none;
-	padding: 12px;
-}
-
-.submit:active{
-	background: linear-gradient(to bottom, #f76767, #ff3f3f);
-}
-
-.submit:focus {
-	background: linear-gradient(to bottom, #f76767, #ff3f3f);
-}
+@media screen and (max-width: 768px) {
+  .header {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .header nav {
+      width: 100%; }
+    .header img {
+      left: 0; }
+    .header ul {
+      justify-content: center;
+      padding-left: 0;
+      flex-wrap: wrap; }
+    .header li {
+      font-size: 1rem;
+      padding: 2vh 3vw;
+      font-size: 1rem; }
+  .inicio h1 {
+    font-size: 7vw; }
+  .card {
+    width: 70vw; }
+  .card-img {
+    width: 100%;
+    max-height: 50vh;
+    object-fit: contain; }
+  .footer {
+    height: 30vh;
+    width: 100vw; }
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    padding: 2vh 0;
+    margin: auto;
+    height: 9vh;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 3vh; }
+  .contacto-container h1 {
+    margin-top: 40vh; }
+  .flex-container {
+    margin: 10vh 15vw; } }
