--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,51 +1,17 @@
-// .header{
-//     z-index: 1;
-//     top: 0;
-//     width: 100%;
-//     filter: opacity(85%);
-//     position: fixed;
-//     background-color: #fff;
-//     display: flex;
-//     justify-content: space-between;
-//     border-bottom: #aaa solid 1px;
-//     img{
-//         height: 17vh;
-//         align-self: center;
-//         position: relative;
-//         left: 4vw;
-//     }
-//     ul{
-//     list-style: none;
-//     display: flex;
-//     margin-bottom: 0;
-//     }
-//     li{
-//         padding: 5vh 3vw;
-//         font-size: 1.3rem;
-//     }
-//     a{
-//         text-decoration: none;
-//         color: #000;
-//         transition: .3s;
-//         &:hover{
-//             color: #999;
-//             transform: scale(1.1);
-//         }
-//     }
-// }
 .container-fluid{
-    background-color: #d45c5b;
+    background-color: #EFEFEF;
+    border-bottom: 1px solid #e4e4e4;
 }
 
 .navbar{
     padding: 0;
     position: fixed;
-    filter: opacity(75%);
+    filter: opacity(90%);
     z-index: 100;
     width: 100vw;
     top: 0;
     .sideBar {
-        width: 10vw;
+        width: 56px;
         height: 3vh;
     }
     .navbar-brand{
@@ -61,19 +27,18 @@
             .nav-item{
                 margin: 0 2vw;
                 .nav-link.active{
-                    color: white;
-                    font-weight: 500;    
+                    color: #D2001A;
+                    font-weight: 550; 
                     &:hover{
-                        color: #e2e2e2;
-                        font-weight: 650;
-                    }
+                        color: #ef3f3f;
+                        font-weight:700;                    }
                 }
             }
             .show>.nav-link{
-                color: white;
+                color: #FFFAE7;
                 font-weight: 500;
                 &:hover{
-                    color: #e2e2e2;
+                    color: #FFFAE7;
                     font-weight: 650;
                 }    
             }           
