--- a/scss/views/_horarios.scss
+++ b/scss/views/_horarios.scss
@@ -1,24 +1,33 @@
 .horario-container{
-    margin-top: 25vh;
+    margin: 20vh 10vw;
+
     h1{
         margin-bottom: 30px;
-        @include views-h1(center, 7vh, rgb(255, 63, 63), opacity(75%),1px 1px 2px #000000);
-        // text-align: center;
-        // font-size: 7vh;
-        // color: rgb(255, 63, 63);
-        // filter: opacity(75%);
-        // text-shadow: 1px 1px 2px #000000 ;
+        @include views-h1(center, 7vh, rgb(255, 63, 63),1px 1px 2px #000000);
+        filter: opacity(75%);
+    }
+    .horario{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        .card{
+            // width: 45%;
+            border-radius: 15px;
+            border: none;
+            img{
+                border-radius: 15px;
+                border-bottom: 3px solid #f76767;
+            }
+            .horario__text{
+                .card__title{
+                    text-align: center;
+                }
+            }
+        }
     }
     ul{
-        margin: 10px 30px;
         list-style: none;
     }
-}
-
-.horario-cards{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
 }
 
 .horario-card{
