--- a/scss/views/_inicio.scss
+++ b/scss/views/_inicio.scss
@@ -3,17 +3,13 @@
     background-image: url("../img/man.jpg");
     height: 100vh;
     background-size:cover;
-    background-position: 0 50%;
+    background-position: 50% 50%;
     filter: opacity(75%);
     justify-content: center;
     align-items: center;
     h1{
         position: relative;
-        @include views-h1(center, 5vw, rgb(255, 63, 63), opacity(75%),1px 1px 2px #000000);
-        // text-align: center;
-        // font-size: 5vw;
-        // text-shadow: 1px 1px 2px #000000 ;
-        // color: #ff3f3f;
+        @include views-h1(center, 8vw, rgb(255, 63, 63), 1px 1px 2px #000000);
         font-weight: bold;
     }
     span{
@@ -22,19 +18,19 @@
 }
 
 .description{
-    padding: 30px 50px;
-    background-color: #9b9b9b;
+    padding: 20px 40px;
+    background-color: #F5EDDC;
     text-align: center;
 }
 
-.servicios-container{
+.servicios{
     margin: 40px 20px;
 }
 
-.servicios-titulo {
+.servicios__titulo {
     text-align: center;
     margin: 60px 0 30px 0;
-    color: rgb(255, 63, 63);
+    color: #ff3f3f;
     filter: opacity(75%);
     text-shadow: 1px 1px 2px #000000 ;
     h2{
@@ -43,7 +39,7 @@
     }
 }
 
-.line{
+.servicios__line{
     width: 70px;
     height: 10px;
     background-color: #f76767;
@@ -52,13 +48,19 @@
     box-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
-.servicios-imagenes{
+.servicios__imagenes{
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     margin: 35px 0;
     img{
         object-fit: cover;
         border-radius: 10px;
         height: 48vh;
+    }
+    h4{
+        margin: 20px 0 15px 0;
+        text-align: center;
     }
     article{
         text-align: center;
@@ -67,12 +69,36 @@
     }
 }
 
-.servicios-div{
+.servicios__card{
     width: 350px;
-    height: 450px;
     margin: 10px;
     padding: 5px;
     border-radius: 10px;
-    background-color: #f76767;
+    background-color: #CFD2CF;
     box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
+}
+
+.valores{
+    margin: 20px 10vw;
+    max-width: 80vw;        
+    .card{
+        background: radial-gradient(circle, #EFEFEF, #f5f5f5);
+        border: none;
+        border-radius: var(--bs-border-radius);
+        img{
+            border-radius: var(--bs-border-radius); 
+            object-fit: cover;       
+        }
+    }
+    &__principios{
+        ul{
+            padding: 0;
+            margin: 0;
+            margin-right: 3vw;
+            li{
+                list-style: none;
+            }
+        }
+        
+    }
 }
