--- a/scss/views/_nosotros.scss
+++ b/scss/views/_nosotros.scss
@@ -1,16 +1,11 @@
 .inicio-container{
-    margin-top: 20vh;
+    margin: 20vh 10vw 10vh 10vw;
     h1{
-        @include views-h1(center, 7vh, rgb(255, 63, 63), opacity(75%),1px 1px 2px #000000);
-        // text-align: center;
-        // font-size: 7vh;
-        // color: rgb(255, 63, 63);
-        // filter: opacity(75%);
-        // text-shadow: 1px 1px 2px #000000 ;
+        @include views-h1(center, 7vh, rgb(255, 63, 63),1px 1px 2px #000000);
+        filter: opacity(75%);
     }
     p{
         text-align: center;
-        margin: 30px 50px;
     }
 }
 
@@ -20,31 +15,25 @@
     justify-content: space-between;
     width: 80%;
     margin: auto;
-    background-color: #f76767;
+    background: radial-gradient(circle, #EFEFEF, #f5f5f5);
     padding: 10px;
     border-radius: 15px;
-}
-
-.inicio-img.uno {
-    width: 200px;
-    height: 250px;
-}
-
-.inicio-img.dos{
-    width: 300px;
-}
-
-.inicio-img{
-    img{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-    margin: 5px;
+    .inicio-img.uno {
+        width: 200px;
+        height: 250px;
     }
-}
-
-.inicio-card {
+    .inicio-img.dos{
+        width: 300px;
+    }
+    .inicio-img{
+        img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+        margin: 5px;
+        }
+    }
     article{
         margin: 30px 20px;
         width: 60%;
@@ -55,7 +44,7 @@
 }
 
 .findus-container{
-    margin: 50px 20px;
+    margin: 5vh 6vw;
     h2 {
         font-size: 6vh;
         text-align: center;
@@ -64,70 +53,73 @@
         filter: opacity(75%);
         text-shadow: 1px 1px 2px #000000 ;
     }
+    .findus{
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        div{
+            border: 2px solid #f76767;
+            margin-bottom: 5vh;
+            border-radius: 15px;
+            box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
+        }
+        iframe{
+            max-width: 100%;
+            border-radius: 15px;
+        }
+    }
 }
 
-.findus{
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    div{
-        background-color: #f76767;
-        border-radius: 15px;
-        box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
-    }
-    iframe{
-        margin: 10px;
-        max-width: 400px;
-        border-radius: 15px;
-    }
-}
+
 
 .story-container{
+    margin: 0 6vw;
     h3{
         font-size: 6vh;
         text-align: center;
-        margin: 60px 0 30px 0;
+        margin: 3vh 0;
         color: rgb(255, 63, 63);
         filter: opacity(75%);
         text-shadow: 1px 1px 2px #000000 ;
     }
-    iframe{
-        object-fit: contain;
-        width: 100%;
-        height: 100%;
-        border-radius: 15px;
-    }
     p{
-        margin: 50px 150px;
         text-align: justify;
+        font-size: 0.7rem;
+        margin: 5vh 2vw ;
+        background: radial-gradient(circle, #EFEFEF, #f5f5f5);
     }
+    .story-video{
+        margin: 0 auto;
+        border: 2px solid #f76767;
+        border-radius: 15px;
+        box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
+        iframe{
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            border-radius: 15px;
+        }
+    }
+    .story-img{
+        background: radial-gradient(circle, #EFEFEF, #f5f5f5);
+        box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        img{
+            margin: 10px 0;
+            border-radius: 15px;
+            border: 2px solid #f76767;
+        }
+        .subtitulo{
+            margin: 0 2vw;
+            text-align: justify;
+            font-size: 2vh;
+        }
+    }    
+    
 } 
 
-.story-video{
-    margin: 0 auto;
-    width: 560px;
-    height: 315px;
-    padding: 10px;
-    background-color: #f76767;
-    border-radius: 15px;
-    box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
-}
 
-.story-img{
-    margin: 0 250px;
-    padding: 10px;
-    background-color: #f76767;
-    border-radius: 15px;
-    box-shadow: 1px 1px 2px #0000001a #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    img{
-        margin: 10px 0;
-    }
-    .subtitulo{
-        margin: 0px 10px;
-        text-align: justify;
-        font-size: 2vh;
-    }
-}
+
